# pid-from-scratch

./: CMakeLists.txt  README.md  ROADMAP.md
app/: CMakeLists.txt  main.cc
doc/: adr-001-architecture.md  plant_description.md
python/: pid.ipynb
src/: CMakeLists.txt
src/control/: CMakeLists.txt  closed_loop_simulator.cc  pid_controller.cc  run_demo.cc  state_space.cc  step_response_metrics.cc  transfer_function.cc
src/control/include/: closed_loop_simulator.h  pid_controller.h  run_demo.h  state_space.h  step_response_metrics.h  transfer_function.h
src/external_lib/matplotlib/: CMakeLists.txt  matplotlibcpp.cc
src/external_lib/matplotlib/include/: matplotlibcpp.h
src/math_operation/: CMakeLists.txt  factorial.cc  linspace.cc  ode.cc  polynomial.cc
src/math_operation/include/: factorial.h  linspace.h  ode.h  polynomial.h
tests/: CMakeLists.txt
tests/control/: CMakeLists.txt  app_smoke_test.cc  closed_loop_simulator_test.cc  notebook_golden_test.cc  pid_controller_test.cc  second_order_validation_test.cc  state_space_test.cc  step_response_metrics_test.cc  system_type_validation_test.cc  transfer_function_test.cc
tests/control/data/: notebook_reference.csv
tests/math_operation/: CMakeLists.txt  factorial_test.cc  linspace_test.cc  ode_test.cc  polynomial_test.cc
tests/support/: CMakeLists.txt  eigen_matchers.h  eigen_matchers_test.cc
