# Sources and Headers
set(LIBRARY_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/factorial.cc")
set(LIBRARY_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/factorial.h")
set(LIBRARY_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include")

# MATH_OPERATION Library
add_library(MATH_OPERATION STATIC ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})
target_include_directories(MATH_OPERATION PUBLIC ${LIBRARY_INCLUDES})
